--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,17 @@
 {
-    "presets": ["env"]
+    "presets": [
+        [
+            "@babel/preset-env",
+            {
+                "modules": false
+            }
+        ]
+    ],
+    "plugins": [
+        [
+            "@babel/plugin-transform-runtime", {
+                "corejs": 3
+            }
+        ]
+    ]
 }
