--- a/package.json
+++ b/package.json
@@ -1,37 +1,40 @@
 {
-  "name": "testgulpfile",
+  "name": "self-gulp-cli",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp dev",
     "dev": "gulp dev",
-    "clean": "rimraf dist",
-    "build": "rimraf dist && gulp build"
+    "build": "gulp build"
   },
-  "author": "",
+  "author": "Herr Huo",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^6.0.0",
-    "gulp-babel": "^7.0.0",
-    "gulp-clean-css": "^3.10.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-connect": "^5.6.1",
-    "gulp-file-include": "^2.0.1",
-    "gulp-imagemin": "^5.0.3",
-    "gulp-less": "^4.0.1",
-    "gulp-load-plugins": "^1.5.0",
+    "@babel/core": "^7.20.5",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/runtime-corejs3": "^7.20.6",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^23.0.4",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-better-rollup": "^4.0.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-connect": "^5.7.0",
+    "gulp-file-include": "^2.3.0",
+    "gulp-header": "^2.0.9",
+    "gulp-load-plugins": "^2.0.8",
     "gulp-minify-html": "^1.0.6",
     "gulp-plumber": "^1.2.1",
-    "gulp-rename": "^1.4.0",
+    "gulp-px2rem-plugin": "^0.4.0",
+    "gulp-rename": "^2.0.0",
     "gulp-repath": "^1.0.2",
-    "gulp-uglify": "^3.0.1",
-    "http-proxy-middleware": "^0.19.0"
-  },
-  "dependencies": {}
+    "gulp-sass": "^5.1.0",
+    "gulp-uglify": "^3.0.2",
+    "rollup": "^3.7.3",
+    "sass": "^1.56.2"
+  }
 }
